--- a/shanei.css
+++ b/shanei.css
@@ -2,14 +2,21 @@
 * {
   box-sizing: border-box;
 }
+
+
+.titulo {
+  font-family:'Courier New', Courier, monospace;
+}
+
 .bgBlack {
   background: #000;
   color: white;
   border-top: 1px transparent rgb(73, 72, 72);
   background-image: linear-gradient(black, rgb(22, 22, 22));
+  border-bottom: 1px solid black;
 }
 .titulo {
-    font-family: 'Great Vibes', cursive;
+    font-family: 'lintsecregular';
 }
 
 .navTitulo {
@@ -72,18 +79,38 @@
   background-repeat: no-repeat;
   background-size: 100% 100%;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 .texShanei {
-  max-width: 90%;
+  width: 1200px;
   height: 600px;
   border: 1px solid white;
   box-shadow: 5px 30px 28px black;
   opacity: 0.7;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  padding: 20px;
+
+
+}
+.nosEstudio {
+width: 200px;
+height: 200px;
+border-radius: 50%; 
+border:1px solid black;
+background: #000;
+margin-left: 20px;
+display: flex;
+justify-content: center;
+align-items: center;
+font-size: 20px;
+color: white;
+}
+.nosParrafo {
+  background-color: #000;
+  max-width: 700px;
+  color: white;
 }
 
 /* Nuestros trabajos */
@@ -97,22 +124,36 @@
   max-width: 40%;
   position: relative;
   left: 150px;
-  top: 200px;
+  top: 150px;
   border: 1px solid white;
   padding: 40px;
   background-color: white;
   color: #000;
-  font-family:  fantasy;
+  font-family: 'lintsecregular';
 }
-.imgTatuajes {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: 80px 200px;
-  gap: 10px;
-  padding: 10px;
-  margin: 10px;
-  max-width: 1000px;
+/* Estilos */
+
+.tituEstilo{
+  background-color: #000;
+  text-align: center;
+  padding: 50px;
+  color: white;
 }
-.imgTatuajes > div {
-  padding: 20px;
+
+.imgEstilo {
+  height: 600px;
+  
+}
+
+.textEstilo{
+  background-color: #000;
+  display: flex;
+  align-items: center;
+}
+/* preguntas frecuentes */
+
+.tituPreg {
+  text-align: center;
+  background-color: #000;
+  color: white;
 }
