--- a/shanei.css
+++ b/shanei.css
@@ -1,14 +1,20 @@
 /*navar*/
 * {
+  border: 0;
+  padding: 0;
   box-sizing: border-box;
 }
+
 @font-face {
-  font-family:'lintsec'; /* Elige un nombre para tu fuente */
-  src: url(fonts/lintsec_.ttf); /* Ruta a tu archivo de fuente en la carpeta de fuentes */
+  font-family: 'lintsec';
+  /* Elige un nombre para tu fuente */
+  src: url(fonts/lintsec_.ttf);
+  /* Ruta a tu archivo de fuente en la carpeta de fuentes */
   font-family: '20db';
   src: url(fonts/20db.otf);
 }
-h3{
+
+h3 {
   font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -18,83 +24,267 @@ h3{
 
 .bgBlack {
   background: #000;
-  color: white;
-  border-top: 1px solid white;
-  background-image: linear-gradient(black, rgb(48, 48, 48));
-  
+  color: #fff;
+
 }
 
 .navTitulo {
   font-size: 20px;
   font-family: 'lintsec', Courier, monospace;
 }
+
 /*carousel portada*/
 
-.caroPortada img{
-  
-  max-width: 100%;
-  height: 1100px;
+.caroPortada img {
+
+  width: 100%;
+  height: 700px;
+  margin: 0 auto;
 
 }
+
 
 .imgCarousel1 {
-  font-size: 60px;
+  font-size: 30px;
   font-family: 'lintsec', Courier, monospace;
 }
+
 .animate__lightSpeedInRight {
   animation-duration: 4s;
 }
+
 /*Artistas*/
 
-.cardArti{
-  background-color: rgb(104, 103, 103);
-  color: white;
-  box-shadow: 1px 5px 20px rgb(104, 103, 103);
+#artistas {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: #1a1919;
 }
-.cardArti img{
-  height: 350px;
+
+#artistas h2 {
+  margin: 50px 0;
+  font-family: 'lintsec';
+  color: #eeeaea;
 }
+
+.card-artistas {
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 30px;
+  margin: 0 auto;
+
+}
+
+.blog-card {
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  &:hover {
+    .card-info {
+      opacity: 1;
+    }
+  }
+}
+
+#nahuel {
+  background: url(imagenes/tigreArtista.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+
+}
+
+#ayelen {
+  background: url(imagenes/ayeArtista.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+#shulian {
+  background: url(imagenes/julitoArtista.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+#agus {
+  background: url(imagenes/agusArtista.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.title-content {
+  text-align: center;
+  margin: 70px 0 0 0;
+  z-index: 20;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+h3 {
+  font-size: 35px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  color: #FFF;
+  font-family: "20db", sans-serif;
+  margin-bottom: 0;
+}
+
+hr {
+  width: 100px;
+  height: 3px;
+  margin: 20px auto;
+  border: 0;
+  background: #d0bb57;
+}
+
+.intro {
+  color: #dce3e7;
+  font-family: "Droid Serif", serif;
+  font-size: 13px;
+  font-style: italic;
+  line-height: 18px;
+}
+
+.card-info {
+  width: 100%;
+  bottom: 100px;
+  left: 0;
+  margin: 0 auto;
+  padding: 0 50px;
+  z-index: 20;
+  opacity: 0;
+  transition: bottom 0.5s, opacity 0.5s;
+}
+
 
 /* Servicios */
 
-.serviShanei{
+.serviShanei {
   height: 700px;
+  background-color: #1a1919;
 }
-.serviShanei img{
-  max-width: 30%;
+
+.serviShanei img {
+  max-width: 100%;
   height: 350px;
-  border: 1px solid white;
   box-shadow: 1px 5px 20px rgb(104, 103, 103);
-  
+  transition: transform 0.3s;
+  margin: 0 auto;
+  border-radius: 15px;
+
 }
+.serviShanei img:hover {
+  transform: scale(1.1);
+}
+
 .imgServi {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  width: 80%;
+  margin: 0 auto;
 }
-.linkServi{
- display: flex;
- justify-content: center;
- font-size: 30px;
 
+.linkServi {
+  display: flex;
+  justify-content: space-evenly;
+  width: 80%;
+  margin: 0 auto;
 }
+
 .linkServi a {
- color: white;
- text-decoration: none;
- font-family: 'Lintsec', Courier, monospace;
-
+  font-size: 30px;
+  color: #eeeaea;
+  text-decoration: none;
+  font-family: 'Lintsec', Courier, monospace;
+  background-color: #363636;
+  margin: 20px;
+  padding: 10px 20px;
+  border-radius: 15px;
 }
- 
+
+
+/* Estilos para el modal */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 800px;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+.modal h3 {
+  font-size: 35px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  color: #FFF;
+  font-family: "20db", sans-serif;
+  margin-bottom: 18px;
+}
+
+.modal-content {
+  max-width: 80%;
+  max-height: auto;
+  overflow: auto;
+  background: #fff;
+  padding: 20px;
+  border-radius: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.modal-imagenes {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
+.modal-close {
+  position: absolute;
+  top: -7px;
+  right: 17px;
+  cursor: pointer;
+  font-size: 40px;
+  font-weight: 900;
+}
+
+.modal-close:hover {
+  color: red;
+}
+
+.modal-content img {
+  max-width: 100%;
+  height: 300px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: transform 0.3s;
+  border-radius: 15px;
+}
+
+
+
 /* nosotros */
 
-.nosoShanei{
-  background: url(imagenes/S.png);
-  height:700px;
+.nosoShanei {
+  background-color:#1a1919;
+  height: 700px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-blend-mode: overlay;
 }
+
 .texShanei {
   width: 1200px;
   height: 600px;
@@ -107,25 +297,28 @@ h3{
 
 
 }
+
 .nosEstudio {
-width: 200px;
-height: 200px;
-border-radius: 50%; 
-border:1px solid black;
-background: #000;
-margin-left: 20px;
-display: flex;
-justify-content: center;
-align-items: center;
-font-size: 20px;
-color: white;
-transition: transform 0.1s ease-in-out;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 1px solid black;
+  background: #000;
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  transition: transform 0.1s ease-in-out;
 }
-.nosEstudio:hover{
+
+.nosEstudio:hover {
   transform: scale(1.3);
-  box-shadow: 20px 30px 28px black;;
+  box-shadow: 20px 30px 28px black;
   border: 1px solid black;
 }
+
 .nosParrafo {
   max-width: 700px;
   color: white;
@@ -134,52 +327,248 @@ transition: transform 0.1s ease-in-out;
 
 /* Nuestros trabajos */
 
-.tattooArtis{
-  height: 800px;
-  background-color: #000;
+#galeria {
+  display: flex;
+  flex-direction: column;
+  background-color: #1a1919;
+}
+
+.tattooArtis {
+  width: 80%;
+  height: auto;
+  margin:0 auto;
 }
 
 .tatuadores {
-  max-width: 40%;
-  position: relative;
-  left: 150px;
-  top: 150px;
-  border: 1px solid white;
   padding: 40px;
-  background-color: white;
-  color: #000;
-  font-family: 'lintsecregular';
+  color: #eeeaea;
+  font-family: '20db';
 }
+.tatuadores h4 {
+  margin-bottom: 30px;
+}
+.botones {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+
+.grid-gallery {
+  display: grid;
+  grid-auto-rows: 200px;
+  gap: 1rem;
+  grid-auto-flow: row dense;
+  
+}
+
+@media all and (min-width: 320px) {
+  .grid-gallery {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media all and (min-width: 768px) {
+  .grid-gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media all and (min-width: 1024px) {
+  .grid-gallery {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+
+.grid-gallery__item:nth-child(11n+1) {
+  grid-column: span 1;
+}
+
+.grid-gallery__item:nth-child(11n+4) {
+  grid-column: span 2;
+  grid-row: span 1;
+}
+
+.grid-gallery__item:nth-child(11n+6) {
+  grid-column: span 3;
+  grid-row: span 1;
+}
+
+.grid-gallery__item:nth-child(11n+7) {
+  grid-column: span 1;
+  grid-row: span 2;
+}
+
+.grid-gallery__item:nth-child(11n+8) {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.grid-gallery__item:nth-child(11n+9) {
+  grid-row: span 3;
+}
+
+.grid-gallery__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.btn-selected {
+  color: white;
+  background-color: black;
+}
+
+
+
 /* Estilos */
 
-.tituEstilo{
-  background-color: #000;
+.estilo {
+  background-color: #1a1919;
+}
+.tituEstilo {
   text-align: center;
   padding: 50px;
-  color: white;
+  color: #1a1919;
 }
-.imgEstilo img{
- background-size: cover;
- height: 650px;
-}
-.textEstilo{
-  background:url(imagenes/fondoGris.jpg);
-  display: flex;
-  align-items: center;
-}
-/* preguntas frecuentes */
-
-.pregFre{
-  background-color: #000;
+.estilo-cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  width: 80%;
+  margin: 0 auto;
 }
 
-.tituPreg {
+
+.card {
+  border-radius: 16px;
+  margin: 0 auto;
+  width: 100%;
+  min-height: 600px;
+  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
+    0px 5px 8px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 14px 0px rgba(0, 0, 0, 0.12);
+  overflow: hidden;
+  background-image: url(imagenes/realismo1.jpg);
+  background-size: cover;
+}
+
+.info {
+  position: relative;
+  width: 100%;
+  height: 600px;
+  background-color: #fff;
+  transform: translateY(100%)
+    translateY(-88px)
+    translateZ(0);
+  transition: transform 0.5s ease-out;
+}
+
+.info:before {
+  z-index: -1;
+  display: block;
+  position: absolute;
+  content: ' ';
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-image: url(imagenes/realismo1.jpg);
+  filter: blur(10px);
+  background-size: cover;
+  opacity: 0.25;
+  transform: translateY(-100%)
+    translateY(88px)
+    translateZ(0);
+  transition: transform 0.5s ease-out;
+}
+
+.card:hover .info,
+.card:hover .info:before {
+  transform: translateY(0) translateZ(0);
+}
+
+.title {
+  margin: 0;
+  padding: 28px 15px;
+  font-size: 32px;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.87);
+  font-weight: 900;
+  font-family: '20db';
+}
+
+.description {
+  margin: 0;
+  padding: 0 24px 24px;
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+
+@media (min-width:800px) {
+  h1 {
+    font-size: 4.236em;
+    font-weight: 300
+  }
+}
+
+p {
+  margin-bottom: 1.3em;
+  line-height: 1.618
+}
+
+@media (min-width:800px) {
+  p {
+    font-size: 1.3em
+  }
+}
+
+a {
+  color: #e03616;
+  text-decoration: none
+}
+.pregFre {
+  width: 100%;
+  background-color: #1a1919;
+}
+.pregFre .container {
+  max-width: 80%;
+  margin: 0 auto;
+}
+.pregFre h2 {
+  padding: 50px 0;
   text-align: center;
-  background-color: #000;
-  color: white;
+  font-size: 50px;
+  text-transform: capitalize;
+  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
+  color: #eeeaea;
 }
-.acorPreg {
-  background-color: #313030;
-  color: white;
+.pregFre h3 {
   font-size: 20px;
+}
+.accordion .accordion-item {
+  margin: 10px 0;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 0 8px #6e7a7a;
+}
+.accordion-titel {
+  background-color: #363636;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+.accordion-contant {
+  padding: 15px;
+  background-color: #dce3e7(55, 138, 159, 0.521);
+  display: none;
+}
+.accordion-titel h3 span {
+  float: right;
+}
+
+/* mapa */
+
+#map {
+width: 100%;
+height: 400px;
 }
