--- a/shanei.css
+++ b/shanei.css
@@ -14,9 +14,6 @@
   src: url(fonts/20db.otf);
 }
 
-h3 {
-  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
-}
 
 .titulo {
   font-family: 'Great Vibes', 'Arial Narrow', Arial, sans-serif;
@@ -27,7 +24,11 @@ h3 {
   color: #fff;
 
 }
-
+.bgBlack nav {
+  background-color: rgba(0, 0, 0, 0.9);
+/*   box-shadow: 0 2px 4px rgba(230, 224, 224, 0.3);
+  border-bottom: 1px solid rgba(14, 13, 13, 0.7) */
+}
 .navTitulo {
   font-size: 20px;
   font-family: 'lintsec', Courier, monospace;
@@ -36,10 +37,10 @@ h3 {
 /*carousel portada*/
 
 .caroPortada img {
-
+  margin-top: 86px;
   width: 100%;
   height: 700px;
-  margin: 0 auto;
+
 
 }
 
@@ -67,7 +68,7 @@ h3 {
 
 #artistas h2 {
   margin: 50px 0;
-  font-family: 'lintsec';
+  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
   color: #eeeaea;
 }
 
@@ -129,11 +130,10 @@ h3 {
 
 h3 {
   font-size: 35px;
-  font-weight: 500;
+  font-weight: 700;
   letter-spacing: 2px;
   color: #FFF;
-  font-family: "20db", sans-serif;
-  margin-bottom: 0;
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
 
 hr {
@@ -141,7 +141,7 @@ hr {
   height: 3px;
   margin: 20px auto;
   border: 0;
-  background: #d0bb57;
+  background: red;
 }
 
 .intro {
@@ -165,10 +165,26 @@ hr {
 
 
 /* Servicios */
-
-.serviShanei {
-  height: 700px;
+.serviShanei h2 {
+  margin: 50px 0;
+  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
+  color: #eeeaea;
+  text-align: center;
+  font-size: 35px;
+}
+ .servi-modal {
+  display: flex;
+  justify-content: space-evenly;
+  width: 80%;
+  margin: 0 auto;
+ }
+ .serviShanei {
+  height: 600px;
   background-color: #1a1919;
+}
+ .imgServi {
+  position: relative;
+  margin: 0 auto;
 }
 
 .serviShanei img {
@@ -180,35 +196,31 @@ hr {
   border-radius: 15px;
 
 }
-.serviShanei img:hover {
-  transform: scale(1.1);
-}
-
-.imgServi {
-  display: flex;
-  justify-content: space-evenly;
-  width: 80%;
-  margin: 0 auto;
-}
 
 .linkServi {
-  display: flex;
-  justify-content: space-evenly;
-  width: 80%;
-  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
 }
 
-.linkServi a {
+.linkServi button {
   font-size: 30px;
   color: #eeeaea;
   text-decoration: none;
-  font-family: 'Lintsec', Courier, monospace;
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
   background-color: #363636;
   margin: 20px;
   padding: 10px 20px;
   border-radius: 15px;
 }
-
+.serviShanei img:hover {
+  transform: scale(1.1);
+}
+.imgServi:hover .linkServi {
+  display: block;
+}
 
 /* Estilos para el modal */
 .modal {
@@ -231,7 +243,7 @@ hr {
 }
 
 .modal-content {
-  max-width: 80%;
+  width: 80%;
   max-height: auto;
   overflow: auto;
   background: #fff;
@@ -262,7 +274,7 @@ hr {
 }
 
 .modal-content img {
-  max-width: 100%;
+  width: 100%;
   height: 300px;
   margin-bottom: 10px;
   cursor: pointer;
@@ -276,6 +288,7 @@ hr {
 
 .nosoShanei {
   background-color:#1a1919;
+  background-image: url(imagenes/bgnosotrosgris.jpg);
   height: 700px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -294,8 +307,7 @@ hr {
   display: flex;
   justify-content: space-around;
   align-items: center;
-
-
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
 
 .nosEstudio {
@@ -342,10 +354,12 @@ hr {
 .tatuadores {
   padding: 40px;
   color: #eeeaea;
-  font-family: '20db';
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
-.tatuadores h4 {
+.tatuadores h3 {
+  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
   margin-bottom: 30px;
+  font-size: 30px;
 }
 .botones {
   display: flex;
@@ -429,7 +443,10 @@ hr {
 .tituEstilo {
   text-align: center;
   padding: 50px;
-  color: #1a1919;
+}
+.tituEstilo h3 {
+  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 35px;
 }
 .estilo-cards {
   display: grid;
@@ -502,6 +519,7 @@ hr {
   padding: 0 24px 24px;
   font-size: 18px;
   line-height: 1.5;
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
 
 
@@ -538,16 +556,17 @@ a {
 .pregFre h2 {
   padding: 50px 0;
   text-align: center;
-  font-size: 50px;
+  font-size: 35px;
   text-transform: capitalize;
   font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
   color: #eeeaea;
 }
 .pregFre h3 {
   font-size: 20px;
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
 .accordion .accordion-item {
-  margin: 10px 0;
+
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0 0 8px #6e7a7a;
@@ -564,11 +583,63 @@ a {
 }
 .accordion-titel h3 span {
   float: right;
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
 
 /* mapa */
-
+#ubicacion {
+  background-color: #1a1919;
+  padding: 50px 0;
+}
+#ubicacion h3 {
+  text-align: center;
+  padding: 30px 0;
+  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 35px;
+}
 #map {
-width: 100%;
+width: 80%;
 height: 400px;
+margin: 0 auto;
+
+}
+/* formulario */
+#contacto {
+  display: flex;
+  background: rgb(26,25,25);
+  background: linear-gradient(180deg, rgba(26,25,25,1) 30%, rgba(68,66,66,1) 100%);
+  padding: 0 10%;
+  padding-bottom: 20px;
+}
+.contacto {
+  width: 50%;
+  padding-top: 50px;
+}
+.contacto h3 {
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
+  padding: 8px;
+}
+.contacto h4{
+  font-size: 12px;
+  color: #eeeaea;
+  padding: 8PX ;
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
+}
+.formulario {
+  width: 50%;
+}
+.formulario h3{
+  font-size: 22px;
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
+}
+footer {
+  background-color: #363636;
+}
+footer h3 {
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
+  text-align: center;
+  padding: 15px;
+  font-size: 18px;
 }
