--- a/shanei.css
+++ b/shanei.css
@@ -5,53 +5,93 @@
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: 'lintsec';
-  /* Elige un nombre para tu fuente */
-  src: url(fonts/lintsec_.ttf);
-  /* Ruta a tu archivo de fuente en la carpeta de fuentes */
-  font-family: '20db';
-  src: url(fonts/20db.otf);
-}
-
 
 .titulo {
   font-family: 'Great Vibes', 'Arial Narrow', Arial, sans-serif;
 }
 
-.bgBlack {
-  background: #000;
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #333;
   color: #fff;
-
-}
-.bgBlack nav {
+  padding: 10px;
   background-color: rgba(0, 0, 0, 0.9);
-/*   box-shadow: 0 2px 4px rgba(230, 224, 224, 0.3);
-  border-bottom: 1px solid rgba(14, 13, 13, 0.7) */
+  position: fixed;
+  top: 0;
+  z-index: 99;
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(230, 224, 224, 0.3);
 }
-.navTitulo {
+
+.nav-center {
   font-size: 20px;
-  font-family: 'lintsec', Courier, monospace;
+  font-family: 'Sancreek', cursive;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+#navbar a {
+  color: #eeeaea;
+  margin: 0 20px;
+}
+
+.menu-icon {
+  display: none;
+  /* Inicialmente, el botón está oculto */
+  background: none;
+  border: none;
+  font-size: 24px;
+  color: #fff;
+  cursor: pointer;
 }
 
 /*carousel portada*/
 
 .caroPortada img {
-  margin-top: 86px;
+  margin-top: 75px;
   width: 100%;
   height: 700px;
-
-
 }
 
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  width: 3rem;
+  height: 3rem;
+}
 
-.imgCarousel1 {
+.carousel-item h5 {
   font-size: 30px;
-  font-family: 'lintsec', Courier, monospace;
+  font-family: 'Sancreek', cursive;
 }
 
 .animate__lightSpeedInRight {
   animation-duration: 4s;
+}
+
+.carousel-inner {
+  position: relative;
+}
+
+.carousel-inner p {
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
+  font-size: 25px;
+}
+
+.carousel-caption {
+  position: absolute;
+  bottom: 20px;
+  /* Ajusta la posición de la leyenda */
+  left: 0;
+  right: 0;
+  z-index: 2;
+  color: #fff;
+  /* Color del texto */
+  text-align: center;
 }
 
 /*Artistas*/
@@ -68,7 +108,7 @@
 
 #artistas h2 {
   margin: 50px 0;
-  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Notable', sans-serif;
   color: #eeeaea;
 }
 
@@ -87,6 +127,7 @@
   border-radius: 10px;
   box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.5);
   text-align: center;
+
   &:hover {
     .card-info {
       opacity: 1;
@@ -114,7 +155,7 @@
 }
 
 #agus {
-  background: url(imagenes/agusArtista.png) no-repeat;
+  background: url(imagenes/agusartistagris.png) no-repeat;
   background-size: cover;
   background-position: center;
 }
@@ -128,15 +169,15 @@
   left: 0;
 }
 
-h3 {
+.card-artistas h3 {
   font-size: 35px;
   font-weight: 700;
   letter-spacing: 2px;
   color: #FFF;
-  font-family: 'Raleway', Arial, Helvetica, sans-serif;
+  font-family: 'Sancreek', cursive;
 }
 
-hr {
+.card-artistas hr {
   width: 100px;
   height: 3px;
   margin: 20px auto;
@@ -146,10 +187,10 @@ hr {
 
 .intro {
   color: #dce3e7;
-  font-family: "Droid Serif", serif;
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
   font-size: 13px;
   font-style: italic;
-  line-height: 18px;
+  line-height: 15px;
 }
 
 .card-info {
@@ -167,22 +208,26 @@ hr {
 /* Servicios */
 .serviShanei h2 {
   margin: 50px 0;
-  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Notable', sans-serif;
   color: #eeeaea;
   text-align: center;
   font-size: 35px;
 }
- .servi-modal {
+
+.servi-modal {
   display: flex;
   justify-content: space-evenly;
   width: 80%;
   margin: 0 auto;
- }
- .serviShanei {
-  height: 600px;
-  background-color: #1a1919;
 }
- .imgServi {
+
+.serviShanei {
+  height: 600px;
+  background: rgb(26, 25, 25);
+  background: linear-gradient(180deg, rgba(26, 25, 25, 1) 93%, rgba(0, 0, 0, 1) 100%);
+}
+
+.imgServi {
   position: relative;
   margin: 0 auto;
 }
@@ -207,17 +252,17 @@ hr {
 
 .linkServi button {
   font-size: 30px;
-  color: #eeeaea;
-  text-decoration: none;
-  font-family: 'Raleway', Arial, Helvetica, sans-serif;
-  background-color: #363636;
+  font-family: 'Sancreek', cursive;
   margin: 20px;
-  padding: 10px 20px;
-  border-radius: 15px;
+  background: none;
+  font-weight: 300;
+  letter-spacing: 10px;
 }
+
 .serviShanei img:hover {
   transform: scale(1.1);
 }
+
 .imgServi:hover .linkServi {
   display: block;
 }
@@ -233,12 +278,13 @@ hr {
   background: rgba(0, 0, 0, 0.5);
   z-index: 9999;
 }
+
 .modal h3 {
   font-size: 35px;
   font-weight: 500;
   letter-spacing: 2px;
   color: #FFF;
-  font-family: "20db", sans-serif;
+  font-family: 'Notable', sans-serif;
   margin-bottom: 18px;
 }
 
@@ -254,6 +300,7 @@ hr {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .modal-imagenes {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -287,48 +334,37 @@ hr {
 /* nosotros */
 
 .nosoShanei {
-  background-color:#1a1919;
+  background-color: #1a1919;
   background-image: url(imagenes/bgnosotrosgris.jpg);
-  height: 700px;
+  height: auto;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  display: flex;
-  justify-content: center;
   align-items: center;
   background-blend-mode: overlay;
+  padding: 50px 0;
+}
+
+.nosoShanei h2 {
+  font-family: 'Notable', sans-serif;
+  color: #eeeaea;
+  text-align: center;
+  font-size: 35px;
+  padding-bottom: 20px;
 }
 
 .texShanei {
-  width: 1200px;
+  margin: 0 auto;
+  width: 80%;
   height: 600px;
   border: 1px solid white;
-  box-shadow: 5px 30px 28px black;
-  opacity: 0.7;
   display: flex;
   justify-content: space-around;
   align-items: center;
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
 
-.nosEstudio {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  border: 1px solid black;
-  background: #000;
-  margin-left: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  color: white;
-  transition: transform 0.1s ease-in-out;
-}
-
-.nosEstudio:hover {
-  transform: scale(1.3);
-  box-shadow: 20px 30px 28px black;
-  border: 1px solid black;
+.texShanei iframe {
+  height: 500px;
 }
 
 .nosParrafo {
@@ -337,18 +373,23 @@ hr {
   font-size: 15px;
 }
 
+.nosParrafo p {
+  font-size: 15px;
+}
+
 /* Nuestros trabajos */
 
 #galeria {
   display: flex;
   flex-direction: column;
-  background-color: #1a1919;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(26, 25, 25, 1) 7%);
 }
 
 .tattooArtis {
   width: 80%;
   height: auto;
-  margin:0 auto;
+  margin: 0 auto;
 }
 
 .tatuadores {
@@ -356,11 +397,13 @@ hr {
   color: #eeeaea;
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
+
 .tatuadores h3 {
-  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Notable', sans-serif;
   margin-bottom: 30px;
   font-size: 30px;
 }
+
 .botones {
   display: flex;
   justify-content: space-evenly;
@@ -372,12 +415,13 @@ hr {
   grid-auto-rows: 200px;
   gap: 1rem;
   grid-auto-flow: row dense;
-  
+
 }
 
 @media all and (min-width: 320px) {
   .grid-gallery {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 150px;
   }
 }
 
@@ -440,14 +484,17 @@ hr {
 .estilo {
   background-color: #1a1919;
 }
+
 .tituEstilo {
   text-align: center;
   padding: 50px;
 }
+
 .tituEstilo h3 {
-  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Notable', sans-serif;
   font-size: 35px;
 }
+
 .estilo-cards {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -456,134 +503,144 @@ hr {
   margin: 0 auto;
 }
 
-
-.card {
-  border-radius: 16px;
-  margin: 0 auto;
-  width: 100%;
-  min-height: 600px;
-  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
-    0px 5px 8px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 14px 0px rgba(0, 0, 0, 0.12);
-  overflow: hidden;
-  background-image: url(imagenes/realismo1.jpg);
-  background-size: cover;
+.flip:hover .front {
+  transform: rotateY(180deg);
 }
 
-.info {
-  position: relative;
-  width: 100%;
-  height: 600px;
-  background-color: #fff;
-  transform: translateY(100%)
-    translateY(-88px)
-    translateZ(0);
-  transition: transform 0.5s ease-out;
+.flip:hover .back {
+  opacity: 1;
+  transform: rotateY(0deg);
 }
 
-.info:before {
-  z-index: -1;
+.flip .front {
   display: block;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition-duration: 0.5s;
+  transition-property: transform, opacity;
+  transform: rotateY(0deg);
+  display: block;
+  color: white;
+  width: inherit;
+  background-size: cover !important;
+  background-position: center !important;
+  height: 500px;
+  padding: 1em 2em;
+  background: #313131;
+  border-radius: 15px;
+}
+
+.flip .back {
+  display: block;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition-duration: 0.5s;
+  transition-property: transform, opacity;
   position: absolute;
-  content: ' ';
+  opacity: 0;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  background-image: url(imagenes/realismo1.jpg);
-  filter: blur(10px);
-  background-size: cover;
-  opacity: 0.25;
-  transform: translateY(-100%)
-    translateY(88px)
-    translateZ(0);
-  transition: transform 0.5s ease-out;
+  transform: rotateY(-180deg);
+  display: block;
+  color: white;
+  width: inherit;
+  background-size: cover !important;
+  background-position: center !important;
+  height: 500px;
+  padding: 1em 2em;
+  background: #313131;
+  border-radius: 15px;
 }
 
-.card:hover .info,
-.card:hover .info:before {
-  transform: translateY(0) translateZ(0);
+.flip {
+  position: relative;
+  display: inline-block;
+  margin-right: 2px;
+  margin-bottom: 1em;
+  width: 100%;
 }
 
-.title {
-  margin: 0;
-  padding: 28px 15px;
-  font-size: 32px;
-  line-height: 1;
-  color: rgba(0, 0, 0, 0.87);
-  font-weight: 900;
-  font-family: '20db';
+.flip h2 {
+  font-size: 30px;
+  font-family: 'Notable', sans-serif;
 }
 
-.description {
-  margin: 0;
-  padding: 0 24px 24px;
+.flip p {
+  padding-top: 20px;
   font-size: 18px;
-  line-height: 1.5;
+  line-height: 2;
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
 
-
-@media (min-width:800px) {
-  h1 {
-    font-size: 4.236em;
-    font-weight: 300
-  }
-}
-
-p {
-  margin-bottom: 1.3em;
-  line-height: 1.618
-}
-
-@media (min-width:800px) {
-  p {
-    font-size: 1.3em
-  }
+.text-shadow {
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04),
+    3px 3px rgba(0, 0, 0, 0.04), 4px 4px rgba(0, 0, 0, 0.04),
+    0.125rem 0.125rem rgba(0, 0, 0, 0.04), 6px 6px rgba(0, 0, 0, 0.04),
+    7px 7px rgba(0, 0, 0, 0.04), 8px 8px rgba(0, 0, 0, 0.04),
+    9px 9px rgba(0, 0, 0, 0.04), 0.3125rem 0.3125rem rgba(0, 0, 0, 0.04),
+    11px 11px rgba(0, 0, 0, 0.04), 12px 12px rgba(0, 0, 0, 0.04),
+    13px 13px rgba(0, 0, 0, 0.04), 14px 14px rgba(0, 0, 0, 0.04),
+    0.625rem 0.625rem rgba(0, 0, 0, 0.04), 16px 16px rgba(0, 0, 0, 0.04),
+    17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04),
+    19px 19px rgba(0, 0, 0, 0.04), 1.25rem 1.25rem rgba(0, 0, 0, 0.04);
 }
 
 a {
   color: #e03616;
   text-decoration: none
 }
+
 .pregFre {
   width: 100%;
   background-color: #1a1919;
+  padding-bottom: 10px;
 }
+
 .pregFre .container {
   max-width: 80%;
   margin: 0 auto;
+
 }
+
 .pregFre h2 {
   padding: 50px 0;
   text-align: center;
   font-size: 35px;
   text-transform: capitalize;
-  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Notable', sans-serif;
   color: #eeeaea;
 }
+
 .pregFre h3 {
   font-size: 20px;
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: #eeeaea;
 }
-.accordion .accordion-item {
 
+.accordion .accordion-item {
+  margin-bottom: 10px;
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0 0 8px #6e7a7a;
 }
+
 .accordion-titel {
-  background-color: #363636;
+  background-color: #1a1919;
   padding: 10px 15px;
   cursor: pointer;
 }
+
 .accordion-contant {
   padding: 15px;
   background-color: #dce3e7(55, 138, 159, 0.521);
   display: none;
 }
+.accordion-contant p{
+  font-family: 'Raleway', Arial, Helvetica, sans-serif;
+}
 .accordion-titel h3 span {
   float: right;
-  font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
 
 /* mapa */
@@ -591,55 +648,303 @@ a {
   background-color: #1a1919;
   padding: 50px 0;
 }
+
 #ubicacion h3 {
   text-align: center;
   padding: 30px 0;
-  font-family: '20db', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Notable', sans-serif;
   font-size: 35px;
+  color: #eeeaea;
 }
-#map {
-width: 80%;
-height: 400px;
-margin: 0 auto;
 
+#map {
+  width: 100%;
+  height: 400px;
 }
+
+.ubicacion {
+  width: 80%;
+  margin: 0 auto;
+}
+
 /* formulario */
 #contacto {
   display: flex;
-  background: rgb(26,25,25);
-  background: linear-gradient(180deg, rgba(26,25,25,1) 30%, rgba(68,66,66,1) 100%);
+  background: rgb(26, 25, 25);
+  background: linear-gradient(180deg, rgba(26, 25, 25, 1) 30%, rgba(68, 66, 66, 1) 100%);
   padding: 0 10%;
   padding-bottom: 20px;
 }
+
 .contacto {
   width: 50%;
   padding-top: 50px;
 }
+
 .contacto h3 {
   font-size: 18px;
   letter-spacing: 2px;
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
   padding: 8px;
+  color: #eeeaea;
 }
-.contacto h4{
+
+.contacto h4 {
   font-size: 12px;
   color: #eeeaea;
-  padding: 8PX ;
+  padding: 8PX;
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
 }
+
 .formulario {
   width: 50%;
 }
-.formulario h3{
+
+.formulario h3 {
   font-size: 22px;
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
+  color: #eeeaea;
 }
+
 footer {
   background-color: #363636;
 }
+
 footer h3 {
   font-family: 'Raleway', Arial, Helvetica, sans-serif;
   text-align: center;
   padding: 15px;
   font-size: 18px;
+  color: #eeeaea;
+  margin: 0 auto;
+}
+
+.whatsapp-link {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+  background-color: rgb(45, 183, 66);
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+.whatsapp-logo {
+font-size: 35px;
+align-items: center;
+}
+.whatsapp-link:hover .whatsapp-logo{
+  color: #eeeaea;
+}
+@media (max-width: 768px) {
+
+  /* Responsive Nav */
+  #navbar {
+    justify-content: initial;
+    padding: 4px 0px;
+  }
+  #navbar a {
+    margin: 0 10px;
+}
+  .navbar a {
+    border-bottom: 1px solid;
+  }
+
+  .menu-icon {
+    display: block;
+  }
+
+  .navbar {
+    position: absolute;
+    top: 54px;
+    background-color: #1a1919;
+    flex-direction: column;
+    box-shadow: 0 2px 4px rgba(230, 224, 224, 0.3);
+    display: none;
+  }
+
+  .navbar a {
+    font-size: 10px;
+  }
+
+  .nav-left {
+    display: flex;
+    width: 300px;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+  .nav-center {
+    font-size: 10px;
+    padding: 10px;
+    padding: 2px 13px;
+  }
+
+
+  .caroPortada img {
+    margin-top: 54px;
+    height: 259px;
+  }
+  .carousel-control-next-icon, .carousel-control-prev-icon {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  #artistas h2 {
+    margin: 28px 0;
+    font-size: 15px;
+  }
+
+  .card-artistas {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .blog-card {
+    height: 250px;
+  }
+
+  .card-artistas h3 {
+    font-size: 18px;
+  }
+
+  .card-artistas hr {
+    width: 47px;
+    margin: 8px auto;
+  }
+
+  .intro {
+    font-size: 11px;
+    line-height: 10px;
+  }
+
+  .serviShanei h2 {
+    margin: 25px 0;
+    font-size: 20px;
+  }
+
+  .serviShanei {
+    height: 375px;
+  }
+
+  .serviShanei img {
+    max-width: 90%;
+    height: 250px;
+  }
+
+  .linkServi button {
+    font-size: 15px;
+    font-weight: 100;
+    letter-spacing: 5px;
+  }
+
+  .nosoShanei h2 {
+    font-size: 20px;
+  }
+
+  .texShanei iframe {
+    display: none;
+  }
+
+  .texShanei {
+    height: auto;
+    padding: 5px;
+  }
+
+  .texShanei span,
+  .texShanei p {
+    font-size: 11px;
+  }
+
+  .modal h3 {
+    font-size: 15px;
+  }
+
+  .modal-imagenes {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+
+  .modal-content {
+    top: 40%;
+    height: 500px;
+    padding: 13px;
+  }
+
+  .modal-close {
+    top: 0;
+    right: 15px;
+    font-size: 30px;
+  }
+
+  .tatuadores h3 {
+    font-size: 20px;
+  }
+
+  .btn.btn-outline-dark {
+    font-size: 10px;
+    margin: 0 6px;
+  }
+  .tituEstilo {
+    padding: 25px;
+  }
+  .tituEstilo h3 {
+    font-size: 20px;
+  }
+  .flip h2 {
+    font-size: 12px;
+  }
+  .flip p {
+    padding-top: 6px;
+    font-size: 10px;
+  }
+  .flip .front, .flip .back {
+    height: 250px;
+    padding: 5px 12px;
+  }
+  .pregFre h2 {
+    padding: 25px 0;
+    font-size: 17px;
+  }
+  .pregFre h3 {
+    font-size: 10px;
+  }
+  .accordion-contant p {
+    font-size: 10px;
+  }
+  #ubicacion {
+    padding: 0;
+  }
+  #ubicacion h3 {
+    padding: 25px 0;
+    font-size: 20px;
+  }
+  #map {
+    height: 200px;
+  }
+  #contacto {
+    padding-top: 20px;
+  }
+  .contacto h3 {
+    font-size: 10px;
+    letter-spacing: 1px;
+    padding: 2px;
+  }
+  .contacto h4 {
+    font-size: 9px;
+    padding: 6PX;
+  }
+  .formulario h3 {
+    font-size: 14px;
+  }
+  .form-control::placeholder {
+    font-size: 11px;
+  }
+  footer h3 {
+    padding: 10px;
+    font-size: 11px;
+  }
 }
